--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,5 +1,6 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# this comment added to force the owrkflow to run
 
 name: Python application
 
