--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@
 name: Python application
 
 on:
-  push
+  [push,
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" ]]
 
 permissions:
   contents: read
