--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,10 +4,8 @@
 
 name: Python application
 
-on:
-  [push,
-  pull_request:
-    branches: [ "main" ]]
+on: 
+  push
 
 permissions:
   contents: read
