added a save button that lets you save the current session.
also fixed skygrab

--- a/.gitignore
+++ b/.gitignore
@@ -7,23 +7,15 @@
 /templates/
 /resources/
 /simpaqs_l1_*/
-PyHammerResults.csv
-RejectSpectra.csv
-spectralIndices.csv
 temp_input_*.txt
 sys
 astropy
 warnings
 glob
-data.csv
-preProcess.csv
 .DS_store
-preProcess.csv
-files.csv
 run.spec
 /build/
 /dist/
 /run.*/
-preProcess.json
-validation.json
-files.json
+*.json
+*.csv
